WIP multi platform Lokifier